# mountain-tiles

./: .gitignore  .harper-dictionary.txt  .typos.toml  CONTRIBUTING.md  COPYRIGHT  Cargo.toml  README.md  TODO.md  bacon.toml  build.rs  ci-and-packaging.md  development.md  icon.icns  index.html  macos-signing.md  web-platform.md  zellij-layout.kdl
.github/workflows/: pages.yml  rust.yml
asset_sources/: mountain-tiles-extra.kra  mountain-tiles-ui.kra  mountain-tiles.kra
assets/: sw.js
deb/: postinst  x-mountain-tiles.xml
dmg/: README.md  create-tiff.sh  dmg-background.tiff
example-data/: example-map.mnp  instructions.mnp  mountain-tiles-workspace.toml
src/: app.rs  instance.rs  lib.rs  main.rs  render.rs  selection.rs  undo.rs  utils.rs
src/app/: actions.rs  codegen.rs  eframe_app.rs  export_workspace.rs  files.rs  init.rs  ipc.rs  layers.rs  maps.rs  modals.rs  notifications.rs  palette.rs  png.rs  raw.rs  selection.rs  stamp.rs  tiled.rs  tilesets.rs  undoredo.rs
src/data/: action.rs  edit_state.rs  file_format.rs  map_edit_state.rs  maps.rs  modal.rs  mode.rs  palette.rs  png.rs  raw.rs  resources.rs  settings.rs  stamp.rs  state.rs  tiled.rs  tiles.rs  tilesets.rs
src/data/config/: workspace.rs
src/data/tiles/: layer_tiles.rs  stamp_tiles.rs  tile_color.rs  tile_selection.rs  tileset_stacked_tiles.rs  tileset_tiles.rs
src/geom/: i32pos2.rs  transform.rs  u32pos2.rs  u32rect.rs  u32size2.rs
src/tiled/: tiled_color.rs  tiled_json.rs  tiled_xml.rs
src/ui/: color_edit.rs  egui_utils.rs  file_dialog.rs  layers.rs  map.rs  maps.rs  menu.rs  modal.rs  palette.rs  shortcuts.rs  theme.rs  tile_mesh.rs  tiles.rs  tileset.rs  tileset_image_loader.rs  tileset_textures.rs  utils.rs
src/ui/modal/: data_loss_modal.rs  error_modal.rs  export_png_modal.rs  export_raw_modal.rs  export_tiled_modal.rs  help_modal.rs  import_tiled_modal.rs  layer_modal.rs  map_modal.rs  palette_modal.rs  settings_modal.rs  tileset_modal.rs
test-data/: instructions-v0.mnp  mountain-tiles-extra.tsx  mountain-tiles.tsx  tiled-zoo-imported.mnp  tiled-zoo.tmj  tiled-zoo.tmx
tests/: file_tests.rs
